--- a/package.json
+++ b/package.json
@@ -9,12 +9,30 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@portabletext/react": "^5.0.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.20.3",
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
+    "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.555.0",
+    "mongoose": "^9.0.0",
     "next": "16.0.7",
+    "next-auth": "^5.0.0-beta.30",
+    "next-sanity": "^11.6.10",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.68.0",
+    "sanity": "^4.20.3",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
